--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -18,9 +18,9 @@
 
 .btn--outline {
   background-color: transparent;
-  color: #fff;
+  color: rgb(255, 255, 255);
   padding: 8px 20px;
-  border: 1px solid var(--primary);
+  border: 2px solid rgb(255, 255, 255);
   transition: all 0.3s ease-out;
 }
 
