--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -7,7 +7,7 @@ video {
 }
 
 .hero-container {
-  /* background: url('/images/img-home.jpg') center center/cover no-repeat; */
+  background: url('/images/img-10.jpg') center center/cover no-repeat; 
   height: 100vh;
   width: 100%;
   display: flex;
@@ -20,41 +20,37 @@ video {
 
 .hero-container > h1 {
   color: #fff;
-  font-size: 100px;
-  margin-top: -100px;
+  font-size: 75px;
+  margin-top: -10px;
 }
 
-.hero-container > p {
+.hero-container > h3 {
   margin-top: 8px;
   color: #fff;
-  font-size: 32px;
+  font-size: 50px;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
     'Lucida Sans', Arial, sans-serif;
 }
 
 .hero-btns {
-  margin-top: 32px;
+  margin-top: 100px;
 }
 
 .hero-btns .btn {
   margin: 6px;
 }
 
-.fa-play-circle {
-  margin-left: 4px;
-}
-
 @media screen and (max-width: 960px) {
   .hero-container > h1 {
-    font-size: 70px;
-    margin-top: -150px;
+    font-size: 60px;
+    margin-top: -15px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .hero-container > h1 {
     font-size: 50px;
-    margin-top: -100px;
+    margin-top: -10px;
   }
 
   .hero-container > p {
